# General_home_work2

./: README.md  operations.xls  pyproject.toml
src/: events_page.py  expenses_by_workday_weekend_report.txt  home_page.py  main.py  operations.xls  reports.py  services.py  utils.py
src/data/: operations.xlsx
