[tool.poetry]
name = "general"
version = "0.1.0"
description = ""
authors = ["Albert <autelec@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
openpyxl = "^3.1.3"
xlrd = "^2.0.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
